# git-repos

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: build-and-publish.yaml  copilot-instructions.md
.github/workflows/: build-and-publish.yaml
src/: app.rs  cache.rs  config.rs  event.rs  git_repo.rs  main.rs  ui.rs  util.rs
