[package]
name = "git-repos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
color-eyre = "0.6"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "sync", "macros", "time"] }
futures = "0.3"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
